--- a/3.39_components-practice/package.json
+++ b/3.39_components-practice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3.39_components-practice",
+  "name": "side_effects_reducers",
   "private": true,
   "version": "0.0.0",
   "type": "module",
