--- a/form_practice/package.json
+++ b/form_practice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3.39_components-practice",
+  "name": "form_practice",
   "private": true,
   "version": "0.0.0",
   "type": "module",
