--- a/redux-practice/package.json
+++ b/redux-practice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3.39_components-practice",
+  "name": "redux-practice",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react-dom": "^18.0.11",
